# django-dynamodb-sessions

./: NOTICE  pyproject.toml  setup.py
dynamodb_sessions/: __init__.py
dynamodb_sessions/backends/: dynamodb.py
